fix(MessageReader): no longer align text in center

--- a/src/components/app/Messaging/MessageReader.css
+++ b/src/components/app/Messaging/MessageReader.css
@@ -47,10 +47,18 @@
     padding: 20px;
     overflow: auto;
 }
+
+/* We take some liberties to make the emails more readable overall */
 #message-reader .message-content > div {
     max-width: 800px;
     margin: 0 auto;
 }
+
+#message-reader .message-content > div img {
+    display: block;
+    margin: 0 auto;
+}
+/* end */
 
 #message-reader .email-footer {
     height: 100px;
