--- a/src/components/generic/CustomDivs/EncodedHTMLDiv.css
+++ b/src/components/generic/CustomDivs/EncodedHTMLDiv.css
@@ -1,4 +1,4 @@
-.html-encoded-div > div > p {
+.html-encoded-div > div p {
     margin-bottom: var(--font-size-16);
 }
 
