--- a/src/components/generic/CustomDivs/ScrollShadedDiv.css
+++ b/src/components/generic/CustomDivs/ScrollShadedDiv.css
@@ -1,6 +1,5 @@
 
 .scroll-shaded-div {
-    text-align: center;
     max-height: 100%;
     overflow: hidden;
     position: relative;
